# voxvibe

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  install.sh.template  pyproject.toml  setup.sh  voxvibe.code-workspace
.claude/commands/: release.md
.github/workflows/: build-and-release.yml  claude.yml
app/: CLAUDE.md  README.md  STREAMING_IMPLEMENTATION.md  VoxVibe_Test_Plan.md  app-description.md  main.py  mise.toml  pyproject.toml  test_streaming.py
app/bucket/: hotkey_manager.py
app/scripts/: test_gnome_extension.py  test_history.py
app/tests/: test_audio_recorder.py  test_config.py  test_dbus_strategy.py  test_logging.py  test_transcriber.py
app/voice_flow/: __init__.py  clipboard_manager.py  dbus_window_manager.py  main.py  transcriber.py
app/voxvibe/: __init__.py  audio_recorder.py  config.py  dbus_window_manager.py  event_bus.py  history.py  history_storage.py  hotkey_manager.py  hotkey_service.py  keyboard_hotkey_manager.py  main.py  mic_bar.py  models.py  post_processor.py  service.py  signal_wakeup_handler.py  single_instance.py  sound_fx.py  state_manager.py  streaming_recorder.py  system_tray.py  theme.py  transcriber.py  tray_icon.py  ui.py  window_manager.py
app/voxvibe/hotkey_manager/: __init__.py  base.py  dbus_hotkey_manager.py  qt_hotkey_manager.py
app/voxvibe/profiles/: __init__.py  config.py  matcher.py
app/voxvibe/transcription/: __init__.py  base.py  voxtral_transcriber.py  whisper_transcriber.py
app/voxvibe/window_manager/: __init__.py  base.py  dbus_strategy.py  manager.py  xdotool_strategy.py
app/working/: signal_wakeup.md  signal_watchdog.md
docs/: dbus_interaction_diagram.md  logs  wisprflow-inspiration.md
extension/: README.md  extension.js  gschemas.compiled  metadata.json  org.gnome.shell.extensions.voxvibe.gschema.xml
src/voice_flow/: main.py
