[project]
name = "voice-flow"
version = "0.1.0"
description = "A voice dictation application for Linux that captures audio and transcribes it to text using Whisper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.1",
    "numpy>=2.3.0",
    "pyperclip>=1.9.0",
    "pyqt6>=6.9.1",
    "sounddevice>=0.5.2",
]

[project.scripts]
voice-flow = "voice_flow.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_flow"]
