[project]
name = "voxvibe"
version = "0.0.3"
description = "A voice dictation application for Linux that captures audio and transcribes it to text using Whisper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.1",
    "numpy>=2.3.0",
    "pyqt6>=6.9.1",
    "qt-material>=2.17",
    "sounddevice>=0.5.2",
]

[project.scripts]
voxvibe = "voxvibe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]
